--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "divin3circle",
   "license": "MIT",
   "devDependencies": {
+    "@types/node": "^22.13.10",
     "prettier": "^3.5.3",
     "typescript": "^5.8.2"
   },
